# hasher

./: README.md  package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/hash_functions/: hashers.rs  mod.rs
src/routes/: +layout.svelte
