[package]
name = "hasher"
version = "0.1.0"
description = "A Simple App for hasing text using Sha2 and Sha3 Hashing Algorithms"
authors = ["you"]
license = ""
repository = ""
# default-run = "Hasher"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.2", features = [] }
sha2 = "0.10.8"
hex = "0.4.3"
sha3 = "0.10.8"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
